--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,12 @@
 /*  your css code here. If applicable */
-/* Apply styles to the grid-container */
 .grid-container {
   display: grid;
+	 grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   flex-wrap: wrap;
   justify-content: center;
-  gap: 10px;/ /* Adjust the gap as needed */
+  align-items: center;
+	grid-gap: 10px 10px ;
 }
-
-/* Apply styles to each grid-item */
 .grid-item {
   background-color: lightgray;
   height: 150px;
@@ -17,5 +16,38 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 5px; /* Add margin for spacing between cards */
+ 
+}
+/* Media query for responsiveness */
+@media (max-width: 768px) {
+  .grid-container {
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+	  
+  }
+}
+
+@media (max-width: 480px) {
+  .grid-container {
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  }
+}
+/* Apply styles to the grid-container */
+/* .grid-container {
+  display: ;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;/ /* Adjust the gap as needed */
+}
+
+/* Apply styles to each grid-item */
+/* .grid-item {
+  background-color: lightgray;
+  height: 150px;
+  width: 200px;
+  border-radius: 5px;
+  font-size: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5px; /* Add margin for spacing between cards */  */
 }
